@@ -56,6 +56,7 @@ Bugs fixed:
 - 2550426 Concurrency issue with LocalConnect
 - 2550880 sfcb sometimes hangs when processing large messages
 - 2192062 providerMgr doesn't check forkProvider() return values
+- 2561165 The genSslCert.sh SSL certificate setup has tempfile races. 
 
 Changes in 1.3.2
 ================
